--- a/biografija.html
+++ b/biografija.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Biografija autora i informacije o obrazovanju">
     <meta name="keywords" content="biografija,informacija,portfolio,iskustvo,obrazovanje">
-    <meta name="author" content="Tamara Milić, nrt-21/17, milict99@gmail.com">
+    <meta name="author" content="Tamara, Milić, milict99@gmail.com">
 
     <title>Biografija</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link href="../css/stil.css" rel="stylesheet" type="text/css">
+    <link href="css/stil.css" rel="stylesheet" type="text/css">
 </head>
 <body class="ruze">
     <nav>
