--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="pocetna,uvod,portfolio">
     <meta name="author" content="Tamara Milić, nrt-21/17, milict99@gmail.com">
     <title>Početna strana</title>
-    <link href="../css/stil.css" rel="stylesheet" type="text/css">
+    <link href="css/stil.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body class="ruze">
