--- a/biografija.html
+++ b/biografija.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Biografija autora i informacije o obrazovanju">
-    <meta name="keywords" content="biografija,informacija,portfolio,iskustvo,obrazovanje">
+    <meta name="description" content="Author's biography and information on education ">
+    <meta name="keywords" content="biography, information, portfolio, experience, education ">
     <meta name="author" content="Tamara, Milić, milict99@gmail.com">
 
     <title>Biografija</title>
@@ -14,79 +14,79 @@
 <body class="ruze">
     <nav>
         <ul>
-            <a href="index.html"><li>POČETNA STRANA</li></a>
-            <a href="biografija.html"><li class="trenutna">BIOGRAFIJA</li></a>
+            <a href="index.html"><li>HOME</li></a>
+            <a href="biografija.html"><li class="trenutna">BIOGRAPHY</li></a>
         </ul>
     </nav>
     <div class="tekst pocetna main">
         <div class="slikaPocetna"></div>
         <div style="display: inline-block; vertical-align: top;">
-            <h1>Lične informacije:</h1>
+            <h1>Personal information:</h1>
             <ul style="list-style-type:none">
-                <li>Ime i prezime: <span>Tamara Milić</span></li>
-                <li>Datum rodjenja: <span>03.02.1999.</span></li>
-                <li>Pol: <span>ženski</span></li>
+                <li>Name: <span>Tamara Milić</span></li>
+                <li>Date of birth: <span>03.02.1999.</span></li>
+                <li>Gender: <span>ženski</span></li>
                 <li>E-mail: <span>milict99@gmail.com</span></li>
-                <li>Broj telefona: <span>063/1999-302</span></li>
+                <li>Phone number: <span>063/1999-302</span></li>
             </ul>    
         </div>
     </div>
     <div class="tekst main">
-        <h1> Radno iskustvo </h1>
+        <h1> Work experience </h1>
         <ul>
             <li>
-                11/2020 - 
+                11/2020 - now
                 <span>
                     <br>
-                    <span class="faded">Zvanje:</span>
-                    Saradnik u nastavi, 
-                    <a href="https://www.viser.edu.rs/" target="_blank">Visoka škola elektrotehnike i računarstva strukovnih studija, Beograd</a>
+                    <span class="faded">Title:</span>
+                    Associate, 
+                    <a href="https://www.viser.edu.rs/" target="_blank"> ATUSS - School of Electrical and Computer Engineering, Belgrade</a>
                 </span>
             </li>
             <li> 
                 10/2019 - 03/2020  
                 <span>
                     <br>
-                    <span class="faded">Zvanje:</span>
-                    Demonstrator, 
-                    <a href="https://www.viser.edu.rs/" target="_blank">Visoka škola elektrotehnike i računarstva strukovnih studija, Beograd</a>
+                    <span class="faded">Title:</span>
+                    Associate's assistant, 
+                    <a href="https://www.viser.edu.rs/" target="_blank"> ATUSS - School of Electrical and Computer Engineering, Belgrade</a>
                 </span>  
             </li>
         </ul>
     </div>
     <div class="tekst main">
-        <h1> Obrazovanje </h1>
+        <h1> Education </h1>
         <p>
             <ul>
                 <li>
-                    2020 - 
+                    2020 - now
                     <span>
                         <br> 
-                        <span class="faded">Zvanje:</span>
-                        Master strukovni inženjer elektrotehnike i računarstva strukovnih studija,
-                        <a href="https://www.viser.edu.rs/" target="_blank">ATUSS - Odsek Visoka škola elektrotehnike i računarstva, Beograd</a>
+                        <span class="faded">Title:</span>
+                        Master of Applied Science,
+                        <a href="https://www.viser.edu.rs/" target="_blank">ATUSS - School of Electrical and Computer Engineering, Belgrade</a>
                         <br> 
-                        <span class="faded">Prosečna ocena: </span>
+                        <span class="faded">Average rating: </span>
                     </span>
                 </li>
                 <li>
                     2017 - 2020 
                     <span>
                         <br> 
-                        <span class="faded">Zvanje:</span> 
-                        Strukovni inženjer elektrotehnike i računarstva strukovnih studija, 
-                        <a href="https://www.viser.edu.rs/" target="_blank">Visoka škola elektrotehnike i računarstva strukovnih studija, Beograd</a>
+                        <span class="faded">Title:</span> 
+                        Bachelor of Applied Science, 
+                        <a href="https://www.viser.edu.rs/" target="_blank">School of Electrical and Computer Engineering, Belgrade</a>
                         <br> 
-                        <span class="faded">Prosečna ocena: </span>9.97 
+                        <span class="faded">Average rating: </span> 9.97 
                     </span>
                 </li>
                 <li>
                     2013 - 2017 
-                    <span>Gimnazija 
+                    <span>Gymnasium 
                     <a href="http://www.gimnazijamilossavkovic.nasaskola.rs/" target="_blank">"Miloš Savković"</a>,
-                    društveno-jezički smer. 
+                    social-linguistic direction. 
                     <br> 
-                    <span class="faded">Prosečna ocena: </span>5.0
+                    <span class="faded">Average rating: </span> 5.0
                     </span>
                 </li>
             </ul>   
@@ -98,8 +98,9 @@
                 <a href="https://www.facebook.com/hermajonii" target="_blank"><i class="fab fa-facebook "></i></a>
                 <a href="https://www.instagram.com/hermajonii" target="_blank"><i class="fab fa-instagram "></i></a>
                 <a href="https://www.linkedin.com/in/tamara-milic-6647251b7/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/hermajonii/" target="_blank"><i class="fab fa-github"></i></a>
             </div>
-             <p> &copy; 2021</p>
+             <p> &copy; 2022</p>
         </div>
     </footer>
 </body>
