--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Uvodna stranica sa bazičnim informacijama">
-    <meta name="keywords" content="pocetna,uvod,portfolio">
-    <meta name="author" content="Tamara Milić, nrt-21/17, milict99@gmail.com">
-    <title>Početna strana</title>
+    <meta name="description" content="Home page with basic information">
+    <meta name="keywords" content="home, introduction, portofio">
+    <meta name="author" content="Tamara Milić, engineer milict99@gmail.com">
+    <title>Home page</title>
     <link href="css/stil.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body class="ruze">
     <nav>
         <ul>
-            <a href="index.html"><li class="trenutna">POČETNA STRANA</li></a>
-            <a href="biografija.html"><li>BIOGRAFIJA</li></a>
+            <a href="index.html"><li class="trenutna">HOME</li></a>
+            <a href="biografija.html"><li>BIOGRAPHY</li></a>
         </ul>
     </nav>
     <div class="slika"></div>	
     <div class="main">    
         <div class="tekst liste" id="vestine">
-            <h1>Digitalne veštine:</h1>
+            <h1>Digital skills:</h1>
             <div>
-                <h2 class="header">Tehnologije:</h2>
+                <h2 class="header">Tehnologies:</h2>
                 <ul>
                     <li><span>Java</span></li>
                     <li><span>C#</span></li>
@@ -33,7 +33,7 @@
                 </ul> 
             </div>
             <div>
-                <h2 class="header">Biblioteke/Radni okviri:</h2>
+                <h2 class="header">Libraries/Frameworks:</h2>
                 <ul>
                     <li><span>Bootstrap</span></li>
                     <li><span>JQuery</span></li>
@@ -43,7 +43,7 @@
                 </ul>  
             </div>
             <div>
-                <h2 class="header">Baze podataka:</h2>
+                <h2 class="header">Databases:</h2>
                 <ul>
                     <li><span>MySQL</span></li>
                     <li><span>SQL Server</span></li>
@@ -52,30 +52,31 @@
             </div>  
         </div>
         <div class="tekst liste">
-            <h1>Ostale veštine:</h1>
+            <h1>Other skills:</h1>
             <div>
-                <h2 class="header">Komunikacione veštine:</h2>
+                <h2 class="header">Communication skills:</h2>
                 <ul>
-                    <li><span>razvijene dobre komunikacione veštine na radnom mestu demonstratora uz konstantnu želju za napretkom i učenjem</span></li>
-                    <li><span>volja za deljenjem znanja i da prilagodljivost svim načinima rada</span></li>
-                    <li><span>spremnost za proširivanje znanja</span></li>
+                    <li><span>developed good communication skills while working as a assosiate</span></li>
+                    <li><span>will to share knowledge</span></li>
+                    <li><span>adaptable to different work modes</span></li>
+                    <li><span>always ready to increase my knowledge and to learn something new</span></li>
                 </ul> 
             </div>
             <div>
-                <h2 class="header">Organizacione veštine:</h2>  
+                <h2 class="header">Organisation skills:</h2>  
                 <ul>
-                    <li><span>dobro snalaženje prilikom rada u timu stečeno radom u stručnim timskim projektima i aktivnim bavljenjem timskim sportom</span></li>
-                    <li><span>postavljanje rokova i njihovo ispunjavanje</span></li>
-                    <li><span>istovremena izrada različitih projekata i uspešna prioritizacija zadataka</span></li>
-                    <li><span>odlično snalaženje za vreme učestvovanja u više projekata stručne prirode</span></li>
+                    <li><span>good teamwork skills acquired through work in professional team projects and active participation in team sports </span></li>
+                    <li><span>setting deadlines and meeting them </span></li>
+                    <li><span>simultaneous development of different projects and successful prioritization of tasks </span></li>
+                    <li><span>excellent skills during participation in several projects of professional nature</span></li>
                 </ul> 
             </div>
             <div>
-                <h2 class="header">Jezičke veštine:</h2>  
+                <h2 class="header">Languages:</h2>  
                 <ul>
-                    <li><span>Srpski</span></li>
-                    <li><span>Engleski</span></li>
-                    <li><span>Francuski</span></li>
+                    <li><span>Serbian</span></li>
+                    <li><span>English</span></li>
+                    <li><span>French</span></li>
                 </ul> 
             </div>
         </div>
@@ -86,8 +87,9 @@
                 <a href="https://www.facebook.com/hermajonii" target="_blank"><i class="fab fa-facebook "></i></a>
                 <a href="https://www.instagram.com/hermajonii" target="_blank"><i class="fab fa-instagram "></i></a>
                 <a href="https://www.linkedin.com/in/tamara-milic-6647251b7/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/hermajonii/" target="_blank"><i class="fab fa-github"></i></a>
             </div>
-             <p> &copy; 2021</p>
+             <p> &copy; 2022</p>
         </div>
     </footer>
 </body>
