--- a/biografija.html
+++ b/biografija.html
@@ -22,10 +22,10 @@
         <div class="slikaPocetna"></div>
         <div style="display: inline-block; vertical-align: top;">
             <h1>Personal information:</h1>
-            <ul style="list-style-type:none">
+            <ul style="list-style-type:none; vertical-align: center;">
                 <li>Name: <span>Tamara Milić</span></li>
                 <li>Date of birth: <span>03.02.1999.</span></li>
-                <li>Gender: <span>ženski</span></li>
+                <li>Gender: <span>female</span></li>
                 <li>E-mail: <span>milict99@gmail.com</span></li>
                 <li>Phone number: <span>063/1999-302</span></li>
             </ul>    
