--- a/biografija.html
+++ b/biografija.html
@@ -23,11 +23,11 @@
         <div style="display: inline-block; vertical-align: top;">
             <h1>Personal information:</h1>
             <ul style="list-style-type:none; vertical-align: center;">
-                <li>Name: <span>Tamara Milić</span></li>
-                <li>Date of birth: <span>03.02.1999.</span></li>
-                <li>Gender: <span>female</span></li>
-                <li>E-mail: <span>milict99@gmail.com</span></li>
-                <li>Phone number: <span>063/1999-302</span></li>
+                <li>Name: <span style=" display: inline-block;vertical-align: middle;">Tamara Milić</span></li>
+                <li>Date of birth: <span style=" display: inline-block;vertical-align: middle;">03.02.1999.</span></li>
+                <li >Gender: <span style=" display: inline-block;vertical-align: middle;">female</span></li>
+                <li>E-mail: <span style=" display: inline-block;vertical-align: middle;">milict99@gmail.com</span></li>
+                <li>Phone number: <span style=" display: inline-block;vertical-align: middle;">063/1999-302</span></li>
             </ul>    
         </div>
     </div>
@@ -84,7 +84,7 @@
                     2013 - 2017 <br>
                     <span>Gymnasium 
                     <a href="http://www.gimnazijamilossavkovic.nasaskola.rs/" target="_blank">"Miloš Savković"</a>,
-                    social-linguistic direction. 
+                    social-linguistic department. 
                     <br> 
                     <span class="faded">Average rating: </span> 5.0
                     </span>
