--- a/biografija.html
+++ b/biografija.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="biography, information, portfolio, experience, education ">
     <meta name="author" content="Tamara, Milić, milict99@gmail.com">
 
-    <title>Biografija</title>
+    <title>Biography</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="css/stil.css" rel="stylesheet" type="text/css">
 </head>
@@ -22,12 +22,12 @@
         <div class="slikaPocetna"></div>
         <div style="display: inline-block; vertical-align: top;">
             <h1>Personal information:</h1>
-            <ul style="list-style-type:none; vertical-align: center;">
-                <li>Name: <span style=" display: inline-block;vertical-align: middle;">Tamara Milić</span></li>
-                <li>Date of birth: <span style=" display: inline-block;vertical-align: middle;">03.02.1999.</span></li>
-                <li >Gender: <span style=" display: inline-block;vertical-align: middle;">female</span></li>
-                <li>E-mail: <span style=" display: inline-block;vertical-align: middle;">milict99@gmail.com</span></li>
-                <li>Phone number: <span style=" display: inline-block;vertical-align: middle;">063/1999-302</span></li>
+            <ul style="">
+                <li>Name: <span>Tamara Milić</span></li>
+                <li>Date of birth: <span>03.02.1999.</span></li>
+                <li >Gender: <span>female</span></li>
+                <li>E-mail: <span>milict99@gmail.com</span></li>
+                <li>Phone number: <span>063/1999-302</span></li>
             </ul>    
         </div>
     </div>
