--- a/biografija.html
+++ b/biografija.html
@@ -83,7 +83,7 @@
                 <li>
                     2013 - 2017 <br>
                     <span>Gymnasium 
-                    <a href="http://www.gimnazijamilossavkovic.nasaskola.rs/" target="_blank">"Miloš Savković"</a>,
+                    <a href="http://www.gimnazijamilossavkovic.nasaskola.rs/" target="_blank">Miloš Savković</a>,
                     social-linguistic department. 
                     <br> 
                     <span class="faded">Average rating: </span> 5.0
