--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                     <li><span>Java Spark</span></li>
                     <li><span>JUnit</span></li>
                     <li><span>Selenium</span></li>
+                    <li><span>Vue.js</span></li>
+                    <li><span>ASP.NET</span></li>
                 </ul>  
             </div>
             <div>
