--- a/biografija.html
+++ b/biografija.html
@@ -66,7 +66,7 @@
                         Master of Applied Science,
                         <a href="https://www.viser.edu.rs/" target="_blank">ATUSS - School of Electrical and Computer Engineering, Belgrade</a>
                         <br> 
-                        <span class="faded">Average rating: </span>
+                        <span class="faded">Average grade: </span>
                     </span>
                 </li>
                 <li>
@@ -77,7 +77,7 @@
                         Bachelor of Applied Science, 
                         <a href="https://www.viser.edu.rs/" target="_blank">School of Electrical and Computer Engineering, Belgrade</a>
                         <br> 
-                        <span class="faded">Average rating: </span> 9.97 
+                        <span class="faded">Average grade: </span> 9.97 
                     </span>
                 </li>
                 <li>
@@ -86,7 +86,7 @@
                     <a href="http://www.gimnazijamilossavkovic.nasaskola.rs/" target="_blank">Miloš Savković</a>,
                     social-linguistic department. 
                     <br> 
-                    <span class="faded">Average rating: </span> 5.0
+                    <span class="faded">Average grade: </span> 5.0
                     </span>
                 </li>
             </ul>   
