--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                     <li><span>Java</span></li>
                     <li><span>C#</span></li>
                     <li><span>PHP</span></li>
-                    <li><span>HTML5/CSS3</span></li>
                     <li><span>Python</span></li>
+                    <li><span>HTML5</span></li>
+                    <li><span>CSS3</span></li>
                     <li><span>UML</span></li>
                 </ul> 
             </div>
