--- a/biografija.html
+++ b/biografija.html
@@ -66,7 +66,7 @@
                         Master of Applied Science,
                         <a href="https://www.viser.edu.rs/" target="_blank">ATUSS - School of Electrical and Computer Engineering, Belgrade</a>
                         <br> 
-                        <span class="faded">Average grade </span>
+                        <!-- <span class="faded">Average grade </span> -->
                     </span>
                 </li>
                 <li>
