--- a/biografija.html
+++ b/biografija.html
@@ -38,7 +38,7 @@
                 11/2020 - now
                 <span>
                     <br>
-                    <span class="faded">Title</span>
+                    <span class="faded">Position</span>
                     Associate, 
                     <a href="https://www.viser.edu.rs/" target="_blank"> ATUSS - School of Electrical and Computer Engineering, Belgrade</a>
                 </span>
@@ -47,7 +47,7 @@
                 10/2019 - 03/2020  
                 <span>
                     <br>
-                    <span class="faded">Title</span>
+                    <span class="faded">Position</span>
                     Associate's assistant, 
                     <a href="https://www.viser.edu.rs/" target="_blank"> ATUSS - School of Electrical and Computer Engineering, Belgrade</a>
                 </span>  
