--- a/biografija.html
+++ b/biografija.html
@@ -24,11 +24,12 @@
         <div style="display: inline-block; vertical-align: top;">
             <h1>Personal information:</h1>
             <ul>
-                <li>Name: <span>Tamara Milić</span></li>
-                <li>Date of birth: <span>03.02.1999.</span></li>
-                <li >Gender: <span>female</span></li>
-                <li>E-mail: <span>milict99@gmail.com</span></li>
-                <li>Phone number: <span>063/1999-302</span></li>
+                <li>Tamara Milić</li>
+                <li><i class="fab fa-calendar"></i><span>03.02.1999.</span></li>
+                <li><i class="fab fa-venus"></i><span>female</span></li>
+                <li><i class="fab fa-envelope"></i><span>milict99@gmail.com</span></li>
+                <li><i class="fab fa-phone"></i><span>063/1999-302</span></li>
+                <li><i class="fab fa-location-dot"></i><span>Belgrade, Serbia</span></li>
             </ul>    
         </div>
     </div>
