--- a/biografija.html
+++ b/biografija.html
@@ -29,7 +29,8 @@
                 <li><i class="fab fa-venus"></i><span>female</span></li>
                 <li><i class="fab fa-envelope"></i><span>milict99@gmail.com</span></li>
                 <li><i class="fab fa-phone"></i><span>063/1999-302</span></li>
-                <li><i class="fab fa-location-dot"></i><span>Belgrade, Serbia</span></li>
+                <li><i class="fa-solid fa-location-dot"></i><span>Belgrade, Serbia</span></li>
+                
             </ul>    
         </div>
     </div>
