--- a/biografija.html
+++ b/biografija.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Tamara, Milić, milict99@gmail.com">
 
     <title>Biography</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="css/stil.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
 </head>
@@ -25,11 +25,11 @@
             <h1>Personal information:</h1>
             <ul>
                 <li>Tamara Milić</li>
-                <li><i class="fab fa-calendar"></i><span>03.02.1999.</span></li>
-                <li><i class="fab fa-venus"></i><span>female</span></li>
-                <li><i class="fab fa-envelope"></i><span>milict99@gmail.com</span></li>
-                <li><i class="fab fa-phone"></i><span>063/1999-302</span></li>
-                <li><i class="fa-solid fa-location-dot"></i><span>Belgrade, Serbia</span></li>
+                <li><i class="fas fa-calendar"></i><span>03.02.1999.</span></li>
+                <li><i class="fas fa-venus"></i><span>female</span></li>
+                <li><i class="fas fa-envelope"></i><span>milict99@gmail.com</span></li>
+                <li><i class="fas fa-phone"></i><span>063/1999-302</span></li>
+                <li><i class="fas fa-map-marker-alt"></i><span>Belgrade, Serbia</span></li>
                 
             </ul>    
         </div>
