--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <ul>
                     <li><span>Bootstrap</span></li>
                     <li><span>JQuery</span></li>
-                    <li><span>Java Spark</span></li>
+                    <li><span>Flask</span></li>
                     <li><span>JUnit</span></li>
                     <li><span>Selenium</span></li>
                     <li><span>Vue.js</span></li>
