--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li><span>Python</span></li>
                     <li><span>HTML5</span></li>
                     <li><span>CSS3</span></li>
+                    <li><span>Java Script</span></li>
                     <li><span>UML</span></li>
                 </ul> 
             </div>
@@ -38,7 +39,6 @@
                 <h2 class="header">Libraries/Frameworks:</h2>
                 <ul>
                     <li><span>Bootstrap</span></li>
-                    <li><span>JQuery</span></li>
                     <li><span>Flask</span></li>
                     <li><span>JUnit</span></li>
                     <li><span>Selenium</span></li>
