--- a/biografija.html
+++ b/biografija.html
@@ -23,7 +23,7 @@
     <div class="tekst pocetna main">
         <div class="slikaPocetna"></div>
         <div style="display: inline-block; vertical-align: top;">
-            <h1>Personal information:</h1>
+            <h1><i class="fas fa-user"></i>Personal information:</h1>
             <ul>
                 <li>Tamara Milić</li>
                 <li><i class="fas fa-calendar"></i><span>03.02.1999.</span></li>
@@ -34,61 +34,67 @@
         </div>
     </div>
     <div class="tekst main">
-        <h1> Work experience </h1>
+        <h1> <i class="fas fa-briefcase"></i>Work experience </h1>
         <ul>
             <li>
-                11/2020 - now
+                2020 - now
                 <span>
                     <br>
-                    <span class="faded">Position</span>
-                    Associate, 
-                    <a href="https://www.viser.edu.rs/" target="_blank"> ATUSS - School of Electrical and Computer Engineering, Belgrade</a>
+                    <span class="faded">Position:</span>
+                    Teacher Associate
+                    <br>
+                    <span class="faded">At:</span><a href="https://www.viser.edu.rs/" target="_blank"> ATUSS - School of Electrical and Computer Engineering</a>, Belgrade
                 </span>
             </li>
             <li> 
-                10/2019 - 03/2020  
+                2019 - 2020  
                 <span>
                     <br>
-                    <span class="faded">Position</span>
-                    Associate's assistant, 
-                    <a href="https://www.viser.edu.rs/" target="_blank"> ATUSS - School of Electrical and Computer Engineering, Belgrade</a>
+                    <span class="faded">Position:</span>
+                    Teacher Associate's assistant
+                    <br>  
+                    <span class="faded">At:</span><a href="https://www.viser.edu.rs/" target="_blank"> ATUSS - School of Electrical and Computer Engineering</a>, Belgrade
                 </span>  
             </li>
         </ul>
     </div>
     <div class="tekst main">
-        <h1> Education </h1>
+        <h1> <i class="fas fa-graduation-cap"></i>Education </h1>
         <p>
             <ul>
                 <li>
                     2020 - now
                     <span>
                         <br> 
-                        <span class="faded">Title</span>
-                        Master of Applied Science,
-                        <a href="https://www.viser.edu.rs/" target="_blank">ATUSS - School of Electrical and Computer Engineering, Belgrade</a>
+                        <span class="faded">Title:</span>
+                        Master of Applied Science
+                        <br>
+                        <span class="faded">School: </span><a href="https://www.viser.edu.rs/" target="_blank">ATUSS - School of Electrical and Computer Engineering</a>, Belgrade
                         <br> 
-                        <span class="faded">Average grade </span> 10.0
+                        <span class="faded">Average grade: </span> 10.0
                     </span>
                 </li>
                 <li>
                     2017 - 2020 
                     <span>
                         <br> 
-                        <span class="faded">Title</span> 
-                        Bachelor of Applied Science, 
-                        <a href="https://www.viser.edu.rs/" target="_blank">School of Electrical and Computer Engineering, Belgrade</a>
+                        <span class="faded">Title:</span> 
+                        Bachelor of Applied Science
+                        <br>
+                        <span class="faded">School: </span> <a href="https://www.viser.edu.rs/" target="_blank">ATUSS - School of Electrical and Computer Engineering</a>, Belgrade
                         <br> 
-                        <span class="faded">Average grade </span> 9.97 
+                        <span class="faded">Average grade: </span> 9.97 
                     </span>
                 </li>
                 <li>
                     2013 - 2017 <br>
-                    <span>Gymnasium 
-                    <a href="http://www.gimnazijamilossavkovic.nasaskola.rs/" target="_blank">Miloš Savković</a>,
-                    social-linguistic department. 
-                    <br> 
-                    <span class="faded">Average grade </span> 5.0
+                    <span>
+                        	<span class="faded">School:</span> Gymnasium
+                        <a href="http://www.gimnazijamilossavkovic.nasaskola.rs/" target="_blank">Miloš Savković</a>,
+                        Aranđelovac, social-linguistic department. 
+                        <br> 
+                        <span class="faded">Average grade: </span> 5.0
+                        </span>
                     </span>
                 </li>
             </ul>   
