--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
             <h1>Favourites:</h2>
             <div id="favourite">
                 <i class="fas fa-coffee"></i>
-                <i class="fas fa-paw"></i>
                 <i class="fas fa-umbrella-beach"></i>
+                <i class="fas fa-cat"></i>                
             </div>
         </div>
         <div class="tekst liste">
-            <h1>Hobbies</h1>
+            <h1>Hobbies and interests:</h1>
             <div>
                 <i class="fas fa-volleyball-ball"></i>
             </div>
@@ -112,13 +112,12 @@
             </div>
             <div>
                 <i class="fas fa-puzzle-piece"></i>
-            </div>
-            
+            </div>            
             <div>
                 <i class="fas fa-palette"></i>
             </div>
             <div>
-                <i class="fas fa-music"></i>
+                <i class="fas fa-paw"></i>
             </div>
             <div>
                 <i class="fas fa-map-marked-alt"></i>
@@ -132,8 +131,16 @@
             <div>
                 <i class="fas fa-dumbbell"></i>
             </div>
-        </div>
-        
+            <div>
+                <i class="fas fa-book-open"></i>
+            </div>
+            <div>
+                <i class="fas fa-swimmer"></i>
+            </div>
+            <div>
+                <i class="fas fa-music"></i>
+            </div>
+        </div>        
     </div>
     <footer>
         <div class="footer">
