--- a/biografija.html
+++ b/biografija.html
@@ -42,7 +42,7 @@
                     <span class="faded">Position:</span>
                     Teacher Associate
                     <br>
-                    <span class="faded">At:</span><a href="https://www.viser.edu.rs/" target="_blank"> ATUSS - School of Electrical and Computer Engineering</a>, Belgrade
+                    <span class="faded">Company:</span><a href="https://www.viser.edu.rs/" target="_blank"> ATUSS - School of Electrical and Computer Engineering</a>, Belgrade
                 </span>
             </li>
             <li> 
@@ -52,7 +52,7 @@
                     <span class="faded">Position:</span>
                     Teacher Associate's assistant
                     <br>  
-                    <span class="faded">At:</span><a href="https://www.viser.edu.rs/" target="_blank"> ATUSS - School of Electrical and Computer Engineering</a>, Belgrade
+                    <span class="faded">Company:</span><a href="https://www.viser.edu.rs/" target="_blank"> ATUSS - School of Electrical and Computer Engineering</a>, Belgrade
                 </span>  
             </li>
         </ul>
