git commit biografija.html

--- a/biografija.html
+++ b/biografija.html
@@ -70,8 +70,8 @@
                         <br>
                         <span class="faded">School: </span><a href="https://www.viser.edu.rs/" target="_blank">ATUSS - School of Electrical and Computer Engineering</a>, Belgrade
                         <br> 
-                    <!--    <span class="faded">Average grade: </span> 10.0
-                    </span>-->
+                       <span class="faded">Average grade: </span> 10.0
+                    </span>
                 </li>
                 <li>
                     2017 - 2020 
