Adding a readme file, changing of techical skills

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li><span>HTML5</span></li>
                     <li><span>CSS3</span></li>
                     <li><span>JavaScript</span></li>
+                    <li><span>TypeScript</span></li>
                     <li><span>UML</span></li>
                 </ul> 
             </div>
@@ -39,10 +40,7 @@
                 <h2 class="header">Libraries or frameworks:</h2>
                 <ul>
                     <li><span>Bootstrap</span></li>
-                    <li><span>Flask</span></li>
                     <li><span>Vue.js</span></li>
-                    <li><span>ASP.NET (Core) </span></li>
-                    <li><span>EntityFramework</span></li>
                     <li><span>Node.js</span></li>
                     <li><span>JUnit</span></li>
                     <li><span>Selenium</span></li>
