--- a/biografija.html
+++ b/biografija.html
@@ -106,7 +106,7 @@
                 <a href="https://www.linkedin.com/in/tamara-milic-6647251b7/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/hermajonii/" target="_blank"><i class="fab fa-github"></i></a>
             </div>
-             <p> &copy; 2022</p>
+            <p> &copy; <script type="text/javascript">document.write(new Date().getFullYear());</script></p>
         </div>
     </footer>
 </body>
