--- a/biografija.html
+++ b/biografija.html
@@ -36,7 +36,17 @@
         <h1> <i class="fas fa-briefcase"></i>Work experience </h1>
         <ul>
             <li>
-                2020 - now
+                2025 - now
+                <span>
+                    <br>
+                    <span class="faded">Position:</span>
+                    Junior Developer
+                    <br>
+                    <span class="faded">Company:</span><a href="https://www.yettel.rs/" target="_blank"> Yettel</a>, Belgrade
+                </span>
+            </li>
+            <li>
+                2020 - 2025
                 <span>
                     <br>
                     <span class="faded">Position:</span>
@@ -62,7 +72,7 @@
         <p>
             <ul>
                 <li>
-                    2020 - now
+                    2020 - 2024
                     <span>
                         <br> 
                         <span class="faded">Title:</span>
@@ -70,6 +80,7 @@
                         <br>
                         <span class="faded">School: </span><a href="https://www.viser.edu.rs/" target="_blank">ATUSS - School of Electrical and Computer Engineering</a>, Belgrade
                         <br> 
+                        <span class="faded"> Department: </span>Computer Engineering <br>
                        <span class="faded">Average grade: </span> 10.0
                     </span>
                 </li>
@@ -82,18 +93,21 @@
                         <br>
                         <span class="faded">School: </span> <a href="https://www.viser.edu.rs/" target="_blank">ATUSS - School of Electrical and Computer Engineering</a>, Belgrade
                         <br> 
+                        <span class="faded"> Department: </span>New Computer Technologies <br>
                         <span class="faded">Average grade: </span> 9.97 
                     </span>
                 </li>
                 <li>
                     2013 - 2017 <br>
                     <span>
-                        	<span class="faded">School:</span> Gymnasium
-                        <a href="http://www.gimnazijamilossavkovic.nasaskola.rs/" target="_blank">Miloš Savković</a>,
-                        Aranđelovac, social-linguistic department. 
+                        <span class="faded">School:</span> Gymnasium
+                             <a href="http://www.gimnazijamilossavkovic.nasaskola.rs/" target="_blank">Miloš Savković</a>,
+                        Aranđelovac. 
                         <br> 
+                        <span class="faded"> Department: </span>Social-linguistic <br>
                         <span class="faded">Average grade: </span> 5.0
                         </span>
+                        
                     </span>
                 </li>
             </ul>   
