--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                     <li><span>Python</span></li>
                     <li><span>HTML5</span></li>
                     <li><span>CSS3</span></li>
-                    <li><span>JavaScript</span></li>
-                    <li><span>TypeScript</span></li>
+                    <li><span>JavaScript / TypeScript</span></li>
                     <li><span>UML</span></li>
                 </ul> 
             </div>
@@ -44,6 +43,7 @@
                     <li><span>Node.js</span></li>
                     <li><span>JUnit</span></li>
                     <li><span>Selenium</span></li>
+                    <li><span>Express</span></li>
                 </ul>  
             </div>
             <div>
@@ -52,6 +52,7 @@
                     <li><span>MySQL</span></li>
                     <li><span>SQL Server</span></li>
                     <li><span>Mongo DB</span></li>
+                    <li><span>PostgreSQL</span></li>
                 </ul>  
 
                     
@@ -59,6 +60,7 @@
                 <div style="font-size:400%; padding:10px">
                     <i class="fab fa-linux"></i>
                     <i class="fab fa-github"></i>
+                    <i class="fab fa-docker"></i>
                 </div>
             </div>  
         </div>
